crates/iroha_executor_data_model_derive/tests/ui/fail/parameter_missing_default.stderr
error[E0277]: the trait bound `MissingDefault: std::default::Default` is not satisfied
 --> tests/ui/fail/parameter_missing_default.rs:7:8
  |
7 | struct MissingDefault {
  |        ^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `MissingDefault`
  |
note: required by a bound in `iroha_executor_data_model::parameter::Parameter`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/parameter.rs
  |
  | pub trait Parameter: Default + JsonDeserializeOwned + JsonSerialize + IntoSchema {
  |                      ^^^^^^^ required by this bound in `Parameter`
help: consider annotating `MissingDefault` with `#[derive(Default)]`
  |
7 + #[derive(Default)]
8 | struct MissingDefault {
  |

error[E0277]: the trait bound `MissingDefault: std::default::Default` is not satisfied
 --> tests/ui/fail/parameter_missing_default.rs:6:54
  |
6 | #[derive(JsonSerialize, JsonDeserialize, IntoSchema, Parameter)]
  |                                                      ^^^^^^^^^ the trait `std::default::Default` is not implemented for `MissingDefault`
  |
note: required by a bound in `iroha_executor_data_model::parameter::Parameter::id`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/parameter.rs
  |
  | pub trait Parameter: Default + JsonDeserializeOwned + JsonSerialize + IntoSchema {
  |                      ^^^^^^^ required by this bound in `Parameter::id`
  |     /// Parameter id, according to [`IntoSchema`].
  |     fn id() -> CustomParameterId {
  |        -- required by a bound in this associated function
  = note: this error originates in the derive macro `Parameter` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `MissingDefault` with `#[derive(Default)]`
  |
7 + #[derive(Default)]
8 | struct MissingDefault {
  |

error[E0277]: the trait bound `MissingDefault: std::default::Default` is not satisfied
 --> tests/ui/fail/parameter_missing_default.rs:7:8
  |
7 | struct MissingDefault {
  |        ^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `MissingDefault`
  |
note: required by a bound in `iroha_executor_data_model::parameter::Parameter::id`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/parameter.rs
  |
  | pub trait Parameter: Default + JsonDeserializeOwned + JsonSerialize + IntoSchema {
  |                      ^^^^^^^ required by this bound in `Parameter::id`
  |     /// Parameter id, according to [`IntoSchema`].
  |     fn id() -> CustomParameterId {
  |        -- required by a bound in this associated function
help: consider annotating `MissingDefault` with `#[derive(Default)]`
  |
7 + #[derive(Default)]
8 | struct MissingDefault {
  |
